# upgrade

./: .gitignore  Cargo.toml  Makefile  README.md  TESTING.md  build.rs  modify-releases.ion  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  coverage.yml
api/18.04/intel/: release.ron
api/18.04/nvidia/: release.ron
api/19.10/intel/: release.ron
api/19.10/nvidia/: release.ron
api/20.04/intel/: release.ron
changelogs/: 18.10  19.04  19.10  20.04  20.10  21.04  21.10  22.04  24.04
client/: Cargo.toml
client/src/: lib.rs
daemon/: Cargo.toml
daemon/src/: changelogs.rs  gnome_extensions.rs  install.rs  lib.rs  logging.rs  main.rs  misc.rs  release_api.rs  release_architecture.rs  system_environment.rs
daemon/src/cli/: colors.rs  mod.rs
daemon/src/client/: mod.rs
daemon/src/daemon/: error.rs  mod.rs  signals.rs  status.rs
daemon/src/fetch/: apt.rs
daemon/src/recovery/: errors.rs  mod.rs
daemon/src/release/: check.rs  eol.rs  errors.rs  mod.rs  recovery.rs  repos.rs  snapd.rs  switchable_graphics.rs  systemd.rs
daemon/src/repair/: crypttab.rs  fstab.rs  packaging.rs
daemon/src/ubuntu_version/: codename.rs  mod.rs  version.rs
data/: com.system76.PopUpgrade.Notify.desktop  dbus-pop-upgrade.service  do-release-upgrade  pop-upgrade-init.service  pop-upgrade-notify.service  pop-upgrade-notify.timer  pop-upgrade.conf  pop-upgrade.service  pop-upgrade.sh
debian/: changelog  control  libpop-upgrade-gtk-dev.install  libpop-upgrade-gtk.install  libpop-upgrade-gtk.shlibs  links  pop-upgrade.install  pop-upgrade.postinst  rules  ubuntu-release-upgrader-core.install
gtk/: Cargo.toml  build.rs
gtk/ffi/: Cargo.toml  build.rs  pop_upgrade_gtk.h
gtk/ffi/examples/c/: main.c  meson.build
gtk/ffi/src/: lib.rs
gtk/src/: battery.rs  errors.rs  events.rs  gtk_utils.rs  lib.rs  main.rs  notify.rs  state.rs  users.rs
gtk/src/events/: mod.rs
gtk/src/events/background/: mod.rs  recovery.rs  release.rs  scan.rs
gtk/src/widgets/: dialog_repository.rs  dismisser.rs  mod.rs  permissions.rs  section.rs  upgrade_option.rs
gtk/src/widgets/dialogs/: mod.rs  refresh.rs  repository.rs  upgrade.rs
i18n/bg/: pop_upgrade_gtk.ftl
i18n/bn/: pop_upgrade_gtk.ftl
i18n/cs/: pop_upgrade_gtk.ftl
i18n/da/: pop_upgrade_gtk.ftl
i18n/de/: pop_upgrade_gtk.ftl
i18n/en/: pop_upgrade_gtk.ftl
i18n/es/: pop_upgrade_gtk.ftl
i18n/fr/: pop_upgrade_gtk.ftl
i18n/hu/: pop_upgrade_gtk.ftl
i18n/it/: pop_upgrade_gtk.ftl
i18n/ja/: pop_upgrade_gtk.ftl
i18n/nb-NO/: pop_upgrade_gtk.ftl
i18n/nb_NO/: pop_upgrade_gtk.ftl
i18n/nl/: pop_upgrade_gtk.ftl
i18n/pl/: pop_upgrade_gtk.ftl
i18n/pt-BR/: pop_upgrade_gtk.ftl
i18n/pt_BR/: pop_upgrade_gtk.ftl
i18n/ru/: pop_upgrade_gtk.ftl
i18n/sl/: pop_upgrade_gtk.ftl
i18n/sr/: pop_upgrade_gtk.ftl
i18n/sv/: pop_upgrade_gtk.ftl
i18n/tr/: pop_upgrade_gtk.ftl
i18n/uk/: pop_upgrade_gtk.ftl
i18n/zh-CN/: pop_upgrade_gtk.ftl
i18n/zh_CN/: pop_upgrade_gtk.ftl
src/: api.rs  app.rs  apt_uris.rs  changelogs.rs  checksum.rs  cli.rs  cli2.rs  client.rs  command.rs  daemon.rs  external.rs  favorites.rs  fetch.rs  gnome_extensions.rs  lib.rs  logging.rs  main.rs  misc.rs  notify.rs  recovery.rs  release.rs  release_api.rs  release_architecture.rs  release_version.rs  repair.rs  repos.rs  sighandler.rs  signal_handler.rs  status.rs  ubuntu_codename.rs
src/app/: prompt.rs  recovery.rs  release.rs  status.rs
src/app/recovery/: upgrade.rs
src/app/release/: check.rs  update.rs  upgrade.rs  util.rs
src/apt_wrappers/: mod.rs  upgrade_event.rs
src/cli/: cancel.rs  color.rs  colors.rs  daemon.rs  mod.rs  prompt.rs  recovery.rs  release.rs  status.rs  util.rs
src/cli/release/: check.rs  dismiss.rs  refresh.rs  repair.rs  update.rs  upgrade.rs
src/cli2/: cancel.rs  daemon.rs  recovery.rs  release.rs  status.rs
src/cli2/release/: check.rs  dismiss.rs  update.rs
src/client/: colors.rs  mod.rs
src/daemon/: dbus_helper.rs  error.rs  methods.rs  mod.rs  runtime.rs  sighandler.rs  signals.rs  status.rs
src/fetch/: apt.rs  apt_uris.rs  http.rs  mod.rs
src/recovery/: check.rs  checksum.rs  errors.rs  external.rs  fetch.rs  mod.rs  version.rs
src/release/: check.rs  eol.rs  errors.rs  mod.rs  recovery.rs  repos.rs  snapd.rs  systemd.rs
src/repair/: crypttab.rs  fstab.rs  misc.rs  mod.rs  packaging.rs  sources.rs
src/ubuntu_version/: codename.rs  mod.rs  version.rs
tools/: Cargo.toml
tools/src/: desktop_entry.rs  notify.rs
