[package]
name = "pop-upgrade"
version = "1.0.0"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
license = "GPL-3.0"
edition = "2018"

[workspace]
members = [ "gtk", "gtk/ffi"]

[dependencies]
anyhow = "1.0.53"
apt-cmd = { git = "https://github.com/pop-os/apt-cmd/" }
as-result = "0.2.1"
async-fetcher = "0.6.1"
atomic = "0.5.1"
atty = "0.2.14"
bitflags = "1.3.2"
cascade = "1.0.0"
chrono = "0.4.19"
clap = "2.34"
dbus = "0.9.5"
dbus-crossroads = "0.5.0"
digest = "0.10.1"
enclose = "1.1.8"
envfile = "0.2.1"
exec = "0.3.1"
fern = "0.6.0"
fomat-macros = "0.3.1"
futures = "0.3.19"
futures-util = "0.3.19"
hex = "0.4.3"
human-sort = "0.2.2"
isahc = "1.6.0"
libc = "0.2.117"
log = "0.4.14"
logind-dbus = "0.1.1"
md-5 = "0.10.0"
notify-rust = { version = "4.5.6", default-features = false, features = ["dbus"] }
num-derive = "0.3.3"
num-traits = "0.2.14"
os_str_bytes = "6.0.0"
os-release = "0.1.0"
proc-mounts = "0.2.4"
procfs = "0.12.0"
pwd = "1.3.1"
rand = "0.8.4"
regex = "1.5.4"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.78"
sha2 = "0.10.1"
shrinkwraprs = "0.3.0"
smolscale = "0.3.20"
sys-mount = "1.3.0"
sysfs-class = { git = "https://github.com/pop-os/sysfs-class" }
systemd-boot-conf = "0.2.2"
tempfile = "3.3.0"
thiserror = "1.0.30"
twoway = "0.2.2"
ubuntu-version = "0.2.4"
users = "0.11.0"
ward = "2.1.0"
whitespace-conf = "1.0.0"
yansi = "0.5.0"
tokio-stream = "0.1.8"

[dependencies.tokio]
version = "1.16.1"
features = ["full"]

[patch.crates-io]
sysfs-class = { git = "https://github.com/pop-os/sysfs-class" }

[features]
testing = []

[dev-dependencies]
test-case = "1.2.1"

[build-dependencies]
fomat-macros = "0.3.1"
