[package]
name = "pop-upgrade"
version = "1.0.0"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
license = "GPL-3.0"
edition = "2018"

[workspace]
members = [ "gtk", "gtk/ffi"]

[dependencies]
anyhow = "1.0.56"
as-result = "0.2.1"
async-shutdown = "0.1.2"
atomic = "0.5.1"
atty = "0.2.14"
bitflags = "1.3.2"
cascade = "1.0.0"
chrono = "0.4.19"
clap = "2.34.0"
const_format = "0.2.22"
dbus = "0.9.5"
dbus-crossroads = "0.5.0"
digest = "0.10.3"
enclose = "1.1.8"
envfile = "0.2.1"
exec = "0.3.1"
fern = "0.6.0"
fomat-macros = "0.3.1"
futures = "0.3.21"
futures-util = "0.3.21"
hex = "0.4.3"
human-sort = "0.2.2"
libc = "0.2.121"
log = "0.4.16"
logind-dbus = "0.1.1"
md-5 = "0.10.1"
nix = "0.23.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
os_str_bytes = "6.0.0"
os-release = "0.1.0"
proc-mounts = "0.3.0"
procfs = "0.12.0"
pwd = "1.3.1"
rand = "0.8.5"
regex = "1.5.5"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
sha2 = "0.10.2"
shrinkwraprs = "0.3.0"
sys-mount = "1.5.1"
systemd-boot-conf = "0.2.2"
tempfile = "3.3.0"
thiserror = "1.0.30"
tokio-stream = "0.1.8"
twoway = "0.2.2"
ubuntu-version = "0.2.5"
users = "0.11.0"
ward = "2.1.0"
whitespace-conf = "1.0.0"
yansi = "0.5.1"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls", "trust-dns"]}
isahc = "1.7.0"
mimalloc = "0.1.28"

[dependencies.apt-cmd]
git = "https://github.com/pop-os/apt-cmd"

[dependencies.async-fetcher]
git = "https://github.com/pop-os/async-fetcher"

[dependencies.sysfs-class]
git = "https://github.com/pop-os/sysfs-class"

[dependencies.notify-rust]
version = "4.5.7"
default-features = false
features = ["dbus"]

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[patch.crates-io]
sysfs-class = { git = "https://github.com/pop-os/sysfs-class" }

[features]
testing = []

[dev-dependencies]
test-case = "2.0.1"
