[package]
name = "pop-upgrade"
version = "1.0.0"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
anyhow = "1.0.65"
as-result = "0.2.1"
async-shutdown = "0.1.2"
atomic = "0.5.1"
atty = "0.2.14"
bitflags = "1.3.2"
cascade = "1.0.1"
chrono = "0.4.22"
clap = "4.0.9"
const_format = "0.2.26"
dbus = "0.9.6"
dbus-crossroads = "0.5.1"
digest = "0.10.5"
enclose = "1.1.8"
envfile = "0.2.1"
exec = "0.3.1"
fern = "0.6.1"
fomat-macros = "0.3.1"
futures = "0.3.24"
futures-util = "0.3.24"
hex = "0.4.3"
human-sort = "0.2.2"
libc = "0.2.134"
log = "0.4.17"
logind-dbus = "0.1.1"
md-5 = "0.10.5"
nix = "0.25.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
os_str_bytes = "6.3.0"
os-release = "0.1.0"
proc-mounts = "0.3.0"
procfs = "0.14.1"
pwd = "1.4.0"
rand = "0.8.5"
regex = "1.6.0"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
sha2 = "0.10.6"
shrinkwraprs = "0.3.0"
sys-mount = "1.5.1"
systemd-boot-conf = "0.2.2"
tempfile = "3.3.0"
thiserror = "1.0.37"
tokio-stream = "0.1.10"
twoway = "0.2.2"
ubuntu-version = "0.2.5"
users = "0.11.0"
ward = "2.1.0"
whitespace-conf = "1.0.0"
yansi = "0.5.1"
isahc = "1.7.2"
mimalloc = "0.1.29"
flume = "0.10.14"

[dependencies.apt-cmd]
git = "https://github.com/pop-os/apt-cmd"

[dependencies.async-fetcher]
git = "https://github.com/pop-os/async-fetcher"
features = ["isahc"]

[dependencies.sysfs-class]
git = "https://github.com/pop-os/sysfs-class"

[dependencies.notify-rust]
version = "4.5.10"
default-features = false
features = ["dbus"]

[dependencies.tokio]
version = "1.21.2"
features = ["full"]

[patch.crates-io]
sysfs-class = { git = "https://github.com/pop-os/sysfs-class" }

[features]
testing = []

[dev-dependencies]
test-case = "2.2.2"
