[package]
name = "pop-upgrade"
version = "1.0.0"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
apt-cmd.workspace = true
as-result = "0.2.1"
async-fetcher = "0.11.0"
async-shutdown = "0.2.2"
atomic = "0.6.0"
atty = "0.2.14"
bitflags = "2.5.0"
bytemuck = "1.15.0"
cascade = "1.0.1"
chrono = "0.4.38"
clap = "3.2.25"
const_format = "0.2.32"
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
digest = "0.10.7"
enclose = "1.1.8"
envfile = "0.2.1"
exec = "0.3.1"
fern = "0.6.2"
flume = "0.11.0"
fomat-macros = "0.3.2"
futures = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
human-sort = "0.2.2"
isahc = "1.7.2"
libc = "0.2.154"
log = "0.4.21"
logind-dbus = "0.1.1"
md-5 = "0.10.6"
mimalloc = "0.1.41"
num-derive = "0.4.2"
num-traits = "0.2.19"
os-release = "0.1.0"
os_str_bytes = "7.0.0"
proc-mounts = "0.3.0"
procfs = "0.16.0"
pwd = "1.4.0"
rand = "0.8.5"
regex = "1.10.4"
rustix = "0.38.34"
serde = "1.0.201"
serde_derive = "1.0.201"
serde_json = "1.0.117"
sha2 = "0.10.8"
shrinkwraprs = "0.3.0"
sys-mount = "3.0.1"
systemd-boot-conf = "0.2.2"
tempfile = "3.10.1"
thiserror = "1.0.60"
tokio-stream = "0.1.15"
twoway = "0.2.2"
users = "0.11.0"
ward = "2.1.0"
whitespace-conf = "1.0.0"
yansi = "1.0.1"

[dependencies.sysfs-class]
git = "https://github.com/pop-os/sysfs-class"

[dependencies.notify-rust]
version = "4.11.0"
default-features = false
features = ["dbus"]

[dependencies.tokio]
version = "1.37.0"
features = ["full"]

[features]
testing = []

[dev-dependencies]
test-case = "2.2.2"
