[package]
name = "pop-upgrade-gtk"
version = "1.0.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

[dependencies]
apt-cmd = { git = "https://github.com/pop-os/apt-cmd/" }
better-panic = "0.3.0"
cascade = "1.0.1"
chrono = "0.4.22"
clap = "4.0.9"
derive_more = "0.99.17"
derive-new = "0.5.9"
enclose = "1.1.8"
fern = "0.6.1"
flume = "0.10.14"
fomat-macros = "0.3.1"
gio = "0.15.12"
glib = "0.15.12"
gtk = { version = "0.15.5", features = [ "v3_22" ] }
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
log = "0.4.17"
notify-rust = { version = "4.5.10", default-features = false, features = ["dbus"] }
num-traits = "0.2.15"
once_cell = "1.15.0"
os-release = "0.1.0"
pango = "0.15.10"
pop-upgrade = { path = "../daemon/" }
rust-embed = { version = "6.4.1", features = ["debug-embed"] }
shrinkwraprs = "0.3.0"
thiserror = "1.0.37"
ubuntu-version = "0.2.5"
upower_dbus = "0.1.0"
users = "0.11.0"
yansi = "0.5.1"
gtk-sys = "0.15.3"

[build-dependencies]
pkg-config = "0.3.25"
