[package]
name = "pop-upgrade-gtk-ffi"
version = "1.0.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2021"

[build-dependencies]
cdylib-link-lines = "0.1.5"

[dependencies]
pop-upgrade-gtk = { path = "../" }
glib = "0.15.12"
gtk-sys = "0.15.3"
gtk = { version = "0.15.5", features = [ "v3_22" ] }
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.8.0"

[lib]
name = "pop_upgrade_gtk"
crate-type = [ "cdylib" ]
